refactoring code (#323)
* refactoring code

* Ignore testBbcStoriesForChildren